// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autocomplete-multiple-selections filters and renders dropdown with options 1`] = `
<autocomplete-multiple-selections input-id="fruit-id" label="Fruit">
  <div class="form-group">
    <div>
      <label class="form-label" htmlfor="fruit-Id">
        <span>
          Fruit
        </span>
      </label>
      <div>
        <div class="ac-multi-select-container">
          <div class="ac-selected-items"></div>
          <div class="ac-input-container">
            <div class="input-group">
              <input aria-autocomplete="list" aria-controls="fruit-Id-listbox" aria-expanded="true" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="fruit-Id" inputmode="text" name="fruit" placeholder="Type to search/filter..." role="combobox" spellcheck="false" type="" value="a">
              <button aria-label="Clear input" class="clear clear-btn input-group-btn" title="Clear input">
                <svg class="fa-icon" viewBox="0 0 384 512" xmlns="http://www.w3.org/2000/svg">
                  <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256l105.3-105.4z"></path>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div aria-live="polite" class="autocomplete-dropdown">
          <ul id="fruit-Id-listbox" role="listbox" tabindex="-1">
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-Id-option-0" role="option" tabindex="-1">
              <span>
                Apple
              </span>
            </li>
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-Id-option-1" role="option" tabindex="-1">
              <span>
                Banana
              </span>
            </li>
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-Id-option-2" role="option" tabindex="-1">
              <span>
                Orange
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</autocomplete-multiple-selections>
`;

exports[`autocomplete-multiple-selections renders with default props 1`] = `
<autocomplete-multiple-selections input-id="fruit" label="Fruits">
  <div class="form-group">
    <div>
      <label class="form-label" htmlfor="fruit">
        <span>
          Fruits
        </span>
      </label>
      <div>
        <div class="ac-multi-select-container">
          <div class="ac-selected-items"></div>
          <div class="ac-input-container">
            <div class="input-group">
              <input aria-autocomplete="list" aria-controls="fruit-listbox" aria-expanded="false" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="fruit" inputmode="text" name="fruits" placeholder="Type to search/filter..." role="combobox" spellcheck="false" type="" value="">
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</autocomplete-multiple-selections>
`;

exports[`autocomplete-multiple-selections selects multiple items and renders selected badges 1`] = `
<autocomplete-multiple-selections>
  <div class="form-group">
    <div>
      <div>
        <div class="ac-multi-select-container">
          <div class="ac-selected-items">
            <span class="badge text-bg-">
              <span>
                One
              </span>
              <button aria-label="Remove One" class="remove-btn" data-tag="One" role="button" title="Remove Tag">
                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                  <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"></path>
                </svg>
              </button>
            </span>
            <span class="badge text-bg-">
              <span>
                Two
              </span>
              <button aria-label="Remove Two" class="remove-btn" data-tag="Two" role="button" title="Remove Tag">
                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                  <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"></path>
                </svg>
              </button>
            </span>
          </div>
          <div class="ac-input-container">
            <div class="input-group">
              <input aria-autocomplete="list" aria-controls="-listbox" aria-expanded="true" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" inputmode="text" placeholder="Type to search/filter..." role="combobox" spellcheck="false" type="" value="">
              <button aria-label="Clear input" class="clear clear-btn input-group-btn" title="Clear input">
                <svg class="fa-icon" viewBox="0 0 384 512" xmlns="http://www.w3.org/2000/svg">
                  <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256l105.3-105.4z"></path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</autocomplete-multiple-selections>
`;

exports[`autocomplete-multiple-selections validates as invalid when required and nothing selected 1`] = `
<autocomplete-multiple-selections required="" validation-message="Select at least one">
  <div class="form-group">
    <div>
      <div>
        <div class="ac-multi-select-container is-invalid">
          <div class="ac-selected-items"></div>
          <div class="ac-input-container">
            <div class="input-group">
              <input aria-autocomplete="list" aria-controls="-listbox" aria-describedby="-validation" aria-expanded="false" aria-haspopup="listbox" aria-labelledby="" aria-required="true" autocomplete="off" class="form-control is-invalid" inputmode="text" placeholder="Type to search/filter..." role="combobox" spellcheck="false" type="" value="">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="invalid-feedback">
      Select at least one
    </div>
  </div>
</autocomplete-multiple-selections>
`;
